ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_multiple_functions_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (8) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (9) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (13) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (15) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%1$] (16) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (17) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%1$] (18) at (2, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [0], [2])};
\node[circle,fill,inner sep=1pt,label=left:$taut$] (1) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (2) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (4) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (12) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (14) at (6, 1) { };
\node[font=\tiny] (note_3) at (3.5, 0.5) {Return([0])};
\node[font=\tiny] (note_4) at (3.5, 0.5) {Return([0])};
\node[font=\tiny] (note_5) at (3.5, 0.5) {Return([0])};
\node[font=\tiny] (note_6) at (3.5, 0.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (11);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (2) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (18);


                \end{tikzpicture}
            \end{document}
