ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_phi_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (1) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (2) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (6) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (7) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (8) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (9) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (12) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (13) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (14) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (15) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (17) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (18) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (19) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (20) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (21) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (22) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (23) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (24) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (25) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (26) at (2, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Phi(2, 0, 1)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->] (0) edge (0);
		\path[->] (0) edge (1);
		\path[->] (1) edge (2);
		\path[->] (2) edge (11);
		\path[->] (0) edge (6);
		\path[->] (0) edge (1);
		\path[->] (1) edge (2);
		\path[->] (2) edge (11);
		\path[->] (6) edge (7);
		\path[->] (7) edge (14);
		\path[->] (7) edge (15);


                \end{tikzpicture}
            \end{document}
