ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_return_branches_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (30) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (43) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (44) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (45) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (46) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (61) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%1$] (62) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (63) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (64) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (65) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (66) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (67) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (68) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (95) at (2, 2) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 5.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:$taut$] (1) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (2) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (8) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (9) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (12) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (13) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (14) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (15) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (17) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (18) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (19) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (20) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (21) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (22) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (23) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (24) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (25) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (26) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (27) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (28) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (29) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (31) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (32) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (33) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (34) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (35) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (36) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (37) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (38) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (39) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (40) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (41) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (42) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (47) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (48) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (49) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (50) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (51) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (52) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (53) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (54) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (55) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (56) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (57) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (58) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (59) at (4, 12) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (60) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (69) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (70) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (71) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (72) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (73) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (74) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (75) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (76) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (77) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (78) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (79) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (80) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (81) at (4, 12) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (82) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (83) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (84) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (85) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (86) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (87) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (88) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (89) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (90) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (91) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (92) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (93) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (94) at (4, 12) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (96) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (97) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (98) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (99) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (100) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (101) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (102) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (103) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (104) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (105) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (106) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (107) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (108) at (4, 12) { };
\node[font=\tiny] (note_2) at (2.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] (note_3) at (2.5, 1.5) {Conditional(1, [1, 2])};
\node[font=\tiny] (note_4) at (2.5, 2.5) {Block(1)};
\node[font=\tiny] (note_5) at (2.5, 3.5) {Const(1, 2.0)};
\node[font=\tiny] (note_6) at (2.5, 4.5) {Const(2, 3.0)};
\node[font=\tiny] (note_7) at (2.5, 5.5) {Return([1])};
\node[font=\tiny] (note_8) at (2.5, 6.5) {Jump(3)};
\node[font=\tiny] (note_9) at (2.5, 7.5) {Block(2)};
\node[font=\tiny] (note_10) at (2.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_11) at (2.5, 9.5) {Jump(3)};
\node[font=\tiny] (note_12) at (2.5, 10.5) {Block(3)};
\node[font=\tiny] (note_13) at (2.5, 11.5) {Return([0])};
\node[font=\tiny] (note_14) at (2.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] (note_15) at (2.5, 1.5) {Conditional(1, [1, 2])};
\node[font=\tiny] (note_16) at (2.5, 2.5) {Block(1)};
\node[font=\tiny] (note_17) at (2.5, 3.5) {Const(1, 2.0)};
\node[font=\tiny] (note_18) at (2.5, 4.5) {Const(2, 3.0)};
\node[font=\tiny] (note_19) at (2.5, 5.5) {Return([1])};
\node[font=\tiny] (note_20) at (2.5, 6.5) {Jump(3)};
\node[font=\tiny] (note_21) at (2.5, 7.5) {Block(2)};
\node[font=\tiny] (note_22) at (2.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_23) at (2.5, 9.5) {Jump(3)};
\node[font=\tiny] (note_24) at (2.5, 10.5) {Block(3)};
\node[font=\tiny] (note_25) at (2.5, 11.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (45);
		\path[->, blue] (0) [bend right] edge  node { } (30);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (7);
		\path[->, blue] (1) [bend right] edge  node { } (8);
		\path[->, blue] (1) [bend right] edge  node { } (9);
		\path[->, blue] (1) [bend right] edge  node { } (10);
		\path[->, blue] (1) [bend right] edge  node { } (11);
		\path[->, blue] (1) [bend right] edge  node { } (12);
		\path[->, blue] (1) [bend right] edge  node { } (13);
		\path[->, blue] (1) [bend right] edge  node { } (14);
		\path[->, blue] (1) [bend right] edge  node { } (15);
		\path[->, blue] (1) [bend right] edge  node { } (16);
		\path[->, blue] (1) [bend right] edge  node { } (17);
		\path[->, blue] (1) [bend right] edge  node { } (59);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (61);
		\path[->, blue] (0) [bend right] edge  node { } (62);
		\path[->] (0) edge (0);
		\path[->] (0) edge (4);
		\path[->] (4) edge (45);
		\path[->] (0) edge (4);
		\path[->] (0) edge (30);
		\path[->] (0) edge (4);
		\path[->] (0) edge (4);
		\path[->] (1) edge (1);
		\path[->] (1) edge (7);
		\path[->] (7) edge (8);
		\path[->] (8) edge (9);
		\path[->] (9) edge (10);
		\path[->] (10) edge (11);
		\path[->] (11) edge (12);
		\path[->] (12) edge (13);
		\path[->] (13) edge (14);
		\path[->] (14) edge (15);
		\path[->] (15) edge (16);
		\path[->] (16) edge (17);
		\path[->] (17) edge (59);
		\path[->] (1) edge (1);
		\path[->] (1) edge (7);
		\path[->] (7) edge (8);
		\path[->] (8) edge (9);
		\path[->] (9) edge (10);
		\path[->] (10) edge (11);
		\path[->] (11) edge (12);
		\path[->] (12) edge (13);
		\path[->] (13) edge (14);
		\path[->] (14) edge (15);
		\path[->] (15) edge (16);
		\path[->] (16) edge (17);
		\path[->] (17) edge (59);
		\path[->] (30) edge node { } (61);
		\path[->] (1) edge (7);
		\path[->] (1) edge (7);
		\path[->, bend right] (7) edge (8);
		\path[->, bend right] (7) edge (8);
		\path[->, bend right] (7) edge (8);
		\path[->, bend right] (7) edge (13);
		\path[->, bend right] (7) edge (13);
		\path[->, bend right] (7) edge (13);
		\path[->] (8) edge (9);
		\path[->] (8) edge (9);
		\path[->] (8) edge (9);
		\path[->] (9) edge (10);
		\path[->] (9) edge (10);
		\path[->] (9) edge (10);
		\path[->] (10) edge (11);
		\path[->] (10) edge (11);
		\path[->] (10) edge (11);
		\path[->] (11) edge (12);
		\path[->] (11) edge (12);
		\path[->] (11) edge (12);
		\path[->, bend right] (12) edge (16);
		\path[->, bend right] (12) edge (16);
		\path[->, bend right] (12) edge (16);
		\path[->] (13) edge (14);
		\path[->] (13) edge (14);
		\path[->] (13) edge (14);
		\path[->] (14) edge (15);
		\path[->] (14) edge (15);
		\path[->] (14) edge (15);
		\path[->, bend right] (15) edge (16);
		\path[->, bend right] (15) edge (16);
		\path[->, bend right] (15) edge (16);
		\path[->] (16) edge (17);
		\path[->] (16) edge (17);
		\path[->] (16) edge (17);
		\path[->] (17) edge (59);
		\path[->] (17) edge (59);
		\path[->] (17) edge (59);


                \end{tikzpicture}
            \end{document}
