ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_return_passed_value_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (8) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (12) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (13) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (14) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (17) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (19) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%1$] (20) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (22) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (23) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (24) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (25) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (26) at (1, 2) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:$taut$] (1) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (2) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (4) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (9) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (10) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (15) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (18) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (21) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (27) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (28) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (29) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (30) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (31) at (5, 1) { };
\node[font=\tiny] (note_2) at (2.5, 0.5) {Return([0])};
\node[font=\tiny] (note_3) at (2.5, 0.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (16);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (2) [bend right] edge  node { } (21);
		\path[->, blue] (0) [bend right] edge  node { } (20);
		\path[->] (0) edge (0);
		\path[->] (0) edge (6);
		\path[->] (6) edge (13);
		\path[->] (0) edge (14);
		\path[->] (0) edge (6);
		\path[->] (1) edge (1);
		\path[->] (1) edge (16);
		\path[->] (1) edge (1);
		\path[->] (1) edge (16);
		\path[->] (8) edge node { } (8);
		\path[->] (1) edge (16);
		\path[->] (2) edge (21);


                \end{tikzpicture}
            \end{document}
