ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_return_values2_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$\%2$] (30) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (25) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (18) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (9) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(1, 2.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [0], [2])};
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (27) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (26) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (24) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (23) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (22) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (20) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (19) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (17) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (15) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (13) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (12) at (5, 0) { };
\node[font=\tiny] (note_3) at (3.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_4) at (3.5, 1.5) {Return([0])};
\node[font=\tiny] (note_5) at (3.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_6) at (3.5, 1.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (12) [bend right] edge  node { } (15);
		\path[->, blue] (12) [bend right] edge  node { } (16);
		\path[->, blue] (12) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (13) [loop right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (25);
		\path[->, blue] (13) [bend right] edge  node { } (26);
		\path[->, blue] (13) [bend right] edge  node { } (27);
		\path[->, blue] (0) [bend right] edge  node { } (30);
		\path[->] (0) edge (4);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (6) edge (7);
		\path[->] (0) edge (9);
		\path[->] (0) edge (10);
		\path[->] (5) edge (11);
		\path[->] (12) edge (15);
		\path[->] (15) edge (16);
		\path[->] (16) edge (17);
		\path[->] (9) edge (18);
		\path[->] (15) edge (19);
		\path[->] (16) edge (20);
		\path[->] (12) edge (22);
		\path[->] (22) edge (23);
		\path[->] (23) edge (24);
		\path[->] (18) edge node { } (25);
		\path[->] (13) edge (26);
		\path[->] (26) edge (27);


                \end{tikzpicture}
            \end{document}
